# DataPolisher

./: .gitignore  README.md  build_app.py  launcher.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
build_assets/: DataPolisher.icns
data_polisher/: __init__.py  __main__.py  cli.py  core.py  feed_eye.py  gui.py  ocr.py  ocr_apple.py  red_number_fonts.py  template.py  web_gui.py
data_polisher/static_web/: app.css  app.js  index.html
scripts/: _build_mac_app_body.sh  build_mac_arm64_app.sh  build_mac_intel_app.sh
tests/: test_core.py  test_feed_eye.py  test_font_calibration.py  test_gui_ranges.py  test_metrics_format.py  test_ocr_fallback.py
