[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-polisher"
version = "0.1.0"
description = "Local screenshot beautify toolkit (OCR + glyph atlas)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pillow>=10.0",
  "opencv-python>=4.7",
  "numpy>=1.26",
  "paddlepaddle>=3.0",
  "paddleocr>=3.0",
]

[project.scripts]
data-polisher = "data_polisher.cli:main"

[project.gui-scripts]
data-polisher-gui = "data_polisher.gui:main"

[tool.setuptools]
packages = ["data_polisher"]
