[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-polisher"
version = "0.1.0"
description = "Local screenshot beautify toolkit (OCR + glyph atlas)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pillow>=10.0",
  "opencv-python>=4.7",
  "numpy>=1.26",
  "paddlepaddle>=3.0",
  "paddleocr>=3.0",
  "pywebview>=5.0",
]

[project.scripts]
data-polisher = "data_polisher.cli:main"

[project.gui-scripts]
data-polisher-gui = "data_polisher.gui:main"

[tool.setuptools]
packages = ["data_polisher"]

[tool.setuptools.package-data]
data_polisher = [
  "static/*",
  "static_web/*",
  "static/fonts/REDNumber-Regular.ttf",
  "static/fonts/REDNumber-Medium.ttf",
  "static/fonts/REDNumber-Bold.otf",
  "static/fonts/DIN-OT-Medium.ttf",
  "static/fonts/FZYouHS-508R.ttf",
  "static/fonts/jlm_cmss10.ttf",
]
